samples/_failures_safe/1761071683_ac64ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_273426b2.c: In function ‘main’:
./samples/SAFE/__tmp_273426b2.c:145:12: error: missing terminating " character
  145 |     printf("
      |            ^
./samples/SAFE/__tmp_273426b2.c:145:5: error: expected expression at end of input
  145 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_273426b2.c:145:5: error: expected declaration or statement at end of input
